--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
  </head>
  <body>
   <h1>Abbey Janicek</h1>
+   <h4>2600 Pleasant Avenue
+     Apartment 302
+     Minneapolis, MN
+     55408</h4>
    <h2>Objective</h2>
    <h2>Experience</h2>
  </body>
