--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
  </head>
  <body>
   <h1>Abbey Janicek</h1>
-   <h4>2600 Pleasant Avenue
-     Apartment 302
-     Minneapolis, MN
-     55408</h4>
+   <h4><p>2600 Pleasant Avenue</p>
+     <p>Apartment 302</p>
+     <p>Minneapolis, MN</p>
+     <p>55408</p></h4>
    <h2>Objective</h2>
+   <h2>Education</h2>
    <h2>Experience</h2>
  </body>
 
