--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
    <h4><p>2600 Pleasant Avenue</p>
      <p>Apartment 302</p>
      <p>Minneapolis, MN</p>
-     <p>55408</p></h4>
+     <p>55408</p>
+     <p>Email: </p>
+     <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn: Abbey Janicek</a></p></h4>
    <h2>Objective</h2>
    <h2>Education</h2>
    <h2>Experience</h2>
