--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <p>Minneapolis, MN</p>
      <p>55408</p>
      <p>Email: </p>
-     <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn: Abbey Janicek</a></p></h4>
+     <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
    <h2>Objective</h2>
    <h2>Education</h2>
    <h2>Experience</h2>
