experience & education details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
    <h2>Objective</h2>
    <h2>Education</h2>
-   <h2>Experience</h2>
+   <h3><p>St. Catherine University, Saint Paul, MN — Master of Arts</p></h3>
+   <p>2008 - 2011</p>
+   <p>Education (MAED)</p>
+   <p>Initial Teaching License – Secondary Mathematics, Grades 5 – 12</p>
+   <h3><p>Cleveland State University, Cleveland, OH — Bachelor of Arts</p></h3>
+   <p>1997- 2001</p>
+   <p>Mathematics</p>
+  <h2>Experience</h2>
+   <h3><p>Science Museum of Minnesota, Saint Paul, MN — Curriculum Writer & Instructor</p></h3>
+   <p>2017 - PRESENT</p>
+   <p>Hired as part of the LinCT project (see below) fellowship of teachers in 2017</p>
+    <p>Currently serve as a curriculum writer for outreach technology residencies in area elementary & middle schools, including writing content to train formal classroom teachers how to teach the technology curriculum within their own schools</p>
+    <p>Teach elementary & middle school age students in technology school year residencies and summer camps</p>
+  <h3><p>Justice Page Middle School, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</p><h3>
+    <p>2014 - 2018</p>
+    <p>Taught Algebra 8; Focus Math 8, an intervention class for students struggling in 8th grade Algebra; 10th grade Geometry, a class for accelerated students; 8th grade Advisory</p>
+    <p>Co-taught with SPED teachers to facilitate student success</p>
+    <p>1:1 iPad use in the classroom</p>
+    <p>Advisor of Student Council & Competitive Math Team for three years</p>
+    <p>Served as 8th grade Team Lead for three years</p>
+<h3><p>Park High School, South Washington County Schools Cottage Grove, MN — Algebra & Geometry Intervention Teacher</p></h3>
+<p>2012 - 2014</p>
+<p>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</p>
+    <p>Developed the Math Lab intervention program to increase student achievement</p>
+    <p>Utilized backwards design to create lessons following district and state standards</p>
+    <p>Participated in a PLC to analyze student data and improve instruction</p>
+
  </body>
 
 </html>
