--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <p>Hired as part of the LinCT project (see below) fellowship of teachers in 2017</p>
     <p>Currently serve as a curriculum writer for outreach technology residencies in area elementary & middle schools, including writing content to train formal classroom teachers how to teach the technology curriculum within their own schools</p>
     <p>Teach elementary & middle school age students in technology school year residencies and summer camps</p>
-  <h3><p>Justice Page Middle School, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</p><h3>
+  <h3><p>Justice Page Middle School, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</p></h3>
     <p>2014 - 2018</p>
     <p>Taught Algebra 8; Focus Math 8, an intervention class for students struggling in 8th grade Algebra; 10th grade Geometry, a class for accelerated students; 8th grade Advisory</p>
     <p>Co-taught with SPED teachers to facilitate student success</p>
