--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <p>55408</p>
      <p>Email: </p>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
-   <img src="https://goo.gl/images/sKdpED" />
+   <img src="https://goo.gl/images/rAfyiM" />
    <h2>Objective</h2>
    <h2>Education</h2>
    <h3><p>St. Catherine University, Saint Paul, MN — Master of Arts</p></h3>
