added bulleted list

--- a/index.html
+++ b/index.html
@@ -24,23 +24,28 @@
   <h2>Experience</h2>
    <h3><p>Science Museum of Minnesota, Saint Paul, MN — Curriculum Writer & Instructor</p></h3>
    <p>2017 - PRESENT</p>
-   <p>Hired as part of the LinCT project (see below) fellowship of teachers in 2017</p>
-    <p>Currently serve as a curriculum writer for outreach technology residencies in area elementary & middle schools, including writing content to train formal classroom teachers how to teach the technology curriculum within their own schools</p>
-    <p>Teach elementary & middle school age students in technology school year residencies and summer camps</p>
+   <p><ul>
+   <li>Hired as part of the LinCT project (see below) fellowship of teachers in 2017</li>
+   <li>Currently serve as a curriculum writer for outreach technology residencies in area elementary & middle schools, including writing content to train formal classroom teachers how to teach the technology curriculum within their own schools</li>
+   <li>Teach elementary & middle school age students in technology school year residencies and summer camps</li>
+   </ul></p>
   <h3><p>Justice Page Middle School, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</p></h3>
     <p>2014 - 2018</p>
-    <p>Taught Algebra 8; Focus Math 8, an intervention class for students struggling in 8th grade Algebra; 10th grade Geometry, a class for accelerated students; 8th grade Advisory</p>
-    <p>Co-taught with SPED teachers to facilitate student success</p>
-    <p>1:1 iPad use in the classroom</p>
-    <p>Advisor of Student Council & Competitive Math Team for three years</p>
-    <p>Served as 8th grade Team Lead for three years</p>
+    <p><ul>
+  <li>Taught Algebra 8; Focus Math 8, an intervention class for students struggling in 8th grade Algebra; 10th grade Geometry, a class for accelerated students; 8th grade Advisory</li>
+   <li>Co-taught with SPED teachers to facilitate student success</li>
+    <li>1:1 iPad use in the classroom</li>
+    <li>Advisor of Student Council & Competitive Math Team for three years</li>
+    <li>Served as 8th grade Team Lead for three years</li>
+</ul></p>
 <h3><p>Park High School, South Washington County Schools Cottage Grove, MN — Algebra & Geometry Intervention Teacher</p></h3>
 <p>2012 - 2014</p>
-<p>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</p>
-    <p>Developed the Math Lab intervention program to increase student achievement</p>
-    <p>Utilized backwards design to create lessons following district and state standards</p>
-    <p>Participated in a PLC to analyze student data and improve instruction</p>
-
+<p><ul>
+  <li>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</p>
+    <li>Developed the Math Lab intervention program to increase student achievement</li>
+    <li>Utilized backwards design to create lessons following district and state standards</li>
+    <li>Participated in a PLC to analyze student data and improve instruction</li>
+</li></p>
  </body>
 
 </html>
