fixed extra space in list

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3><p>Park High School, South Washington County Schools Cottage Grove, MN — Algebra & Geometry Intervention Teacher</p></h3>
 <p>2012 - 2014</p>
 <p><ul>
-  <li>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</p>
+  <li>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</li>
     <li>Developed the Math Lab intervention program to increase student achievement</li>
     <li>Utilized backwards design to create lessons following district and state standards</li>
     <li>Participated in a PLC to analyze student data and improve instruction</li>
