added Nav section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
  </head>
  <body>
   <h1>Abbey Janicek</h1>
+   <div class="nav">
+     <h2><ul>
+       <li>Objective</li>
+       <li>Education</li>
+       <li>Experience</li>
+       </ul></h2>
    <h4><p>2600 Pleasant Avenue</p>
      <p>Apartment 302</p>
      <p>Minneapolis, MN</p>
