forgot to close the div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
        <li>Education</li>
        <li>Experience</li>
        </ul></h2>
+   </div>
    <h4><p>2600 Pleasant Avenue</p>
      <p>Apartment 302</p>
      <p>Minneapolis, MN</p>
