--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <title>Abbey Janicek Resume</title>
  </head>
- <body>
-  <h1>Abbey Janicek</h1>
+ <div class="container">
+  <body>
    <div class="nav">
-     <h2><ul>
+     <h2>Resume Navigation</h2>
+     <h3><ul>
        <li>Objective</li>
        <li>Education</li>
        <li>Experience</li>
-       </ul></h2>
+       </ul></h3>
    </div>
+    <div class="main">
+   <h1>Abbey Janicek</h1>
    <h4><p>2600 Pleasant Avenue</p>
      <p>Apartment 302</p>
      <p>Minneapolis, MN</p>
@@ -53,6 +56,7 @@
     <li>Utilized backwards design to create lessons following district and state standards</li>
     <li>Participated in a PLC to analyze student data and improve instruction</li>
 </li></p>
+  </div>
  </body>
-
+</div>
 </html>
