adding a div class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  </head>
  <div class="container">
   <body>
+    <div class="background-image">
+    </div>
    <div class="nav">
      <h2>Resume Navigation</h2>
      <h3><ul>
