working with the div for background image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
  </head>
  <div class="container">
   <body>
-    <div class="background-image">
-    </div>
+    <div class="hero-unit">
+  <div class="hero-unit__background-image">
+  </div>
+</div>
    <div class="nav">
      <h2>Resume Navigation</h2>
      <h3><ul>
