set up div for each section; text for Objective

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
        </ul></h3>
    </div>
     <div class="main">
+      <div class="gallery">
+      <figure class="gallery-item">
    <h1>Abbey Janicek</h1>
    <h4><p>2600 Pleasant Avenue</p>
      <p>Apartment 302</p>
@@ -26,8 +28,18 @@
      <p>55408</p>
      <p>Email: </p>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
-   <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
+        </figure>
+   <div class="gallery">
+      <figure class="gallery-item">
+      <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
+     </figure>
+     <div class="gallery">
+      <figure class="gallery-item">
    <h2>Objective</h2>
+        <p>To be accepted to the Full Stack Engineering program at Prime. To use this education to gain employment with a company whee I can apply and develop my skills</p>
+       </figure>
+   <div class="gallery">
+      <figure class="gallery-item">
    <h2>Education</h2>
    <h3><p>St. Catherine University, Saint Paul, MN — Master of Arts</p></h3>
    <p>2008 - 2011</p>
@@ -36,6 +48,9 @@
    <h3><p>Cleveland State University, Cleveland, OH — Bachelor of Arts</p></h3>
    <p>1997- 2001</p>
    <p>Mathematics</p>
+         </figure>
+   <div class="gallery">
+      <figure class="gallery-item">
   <h2>Experience</h2>
    <h3><p>Science Museum of Minnesota, Saint Paul, MN — Curriculum Writer & Instructor</p></h3>
    <p>2017 - PRESENT</p>
@@ -61,6 +76,7 @@
     <li>Utilized backwards design to create lessons following district and state standards</li>
     <li>Participated in a PLC to analyze student data and improve instruction</li>
 </li></p>
+       </figure>
   </div>
  </body>
 </div>
