--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <div class="gallery">
       <figure class="gallery-item">
    <h2>Objective</h2>
-        <p>To be accepted to the Full Stack Engineering program at Prime. To use this education to gain employment with a company whee I can apply and develop my skills</p>
+        <p>To be accepted to the Full Stack Engineering program at Prime. To use this education to gain employment with a company where I can apply and develop my skills.</p>
        </figure>
    <div class="gallery">
       <figure class="gallery-item">
