set classes for name and address

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="main">
       <div class="gallery">
       <figure class="gallery-item">
-   <h1>Abbey Janicek</h1>
-   <h4><p>2600 Pleasant Avenue</p>
-     <p>Apartment 302</p>
-     <p>Minneapolis, MN</p>
-     <p>55408</p>
+   <h1 class="name">Abbey Janicek</h1>
+   <h4><p class="address">2600 Pleasant Avenue
+     Apartment 302
+     Minneapolis, MN
+     55408</p>
      <p>Email: </p>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
         </figure>
