orient resume pic

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
    <h4><p class="address">2600 Pleasant Avenue
      Apartment 302
      Minneapolis, MN
-     55408</p>
+     55408
+     <div class="gallery">
+      <figure class="gallery-item">
+      <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
+     </figure></p>
      <p>Email: </p>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
         </figure>
-   <div class="gallery">
-      <figure class="gallery-item">
-      <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
-     </figure>
      <div class="gallery">
       <figure class="gallery-item">
    <h2>Objective</h2>
