borders - navigation, email/linkedin

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   </div>
 </div>
    <div class="nav">
+     <div class="gallery">
+      <figure class="gallery-item">
      <h2>Resume Navigation</h2>
      <h3><ul>
        <li>Objective</li>
        <li>Education</li>
        <li>Experience</li>
        </ul></h3>
+       </figure>
    </div>
     <div class="main">
       <div class="gallery">
@@ -27,7 +30,7 @@
      Minneapolis, MN
      55408
       <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
-     </figure></p>
+     </p>
      <p>Email: </p>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
         </figure>
