--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="hero-unit__background-image">
   </div>
 </div>
+    <nav>
    <div class="nav">
      <div class="gallery">
       <figure class="gallery-item">
@@ -20,6 +21,7 @@
        </ul></h3>
        </figure>
    </div>
+     </nav>
     <div class="main">
       <div class="gallery">
       <figure class="gallery-item">
