div element = email

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
      55408
       <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
      </p>
-     <p>Email: </p>
+     <div class="email">
+     <p>Email: abbey.janicek@gmail.com</p>
+     </div>
      <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
         </figure>
      <div class="gallery">
