--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <div class="email">
      <p>Email: abbey.janicek@gmail.com</p>
      </div>
-     <p> <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
+     <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></h4>
         </figure>
      <div class="gallery">
       <figure class="gallery-item">
