--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
      <div class="email">
      <p>Email: abbey.janicek@gmail.com</p>
      </div>
+     <div class="linkedin">
      <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></h4>
         </figure>
+        </div>
      <div class="gallery">
       <figure class="gallery-item">
    <h2>Objective</h2>
