removed paragraph around email

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img width="240" height="240" src="abbeyjanicek.github.io/Resume_Photo-1.jpg"/>
      </p>
      <div class="email">
-     <p>Email: abbey.janicek@gmail.com</p>
+     Email: abbey.janicek@gmail.com
      </div>
      <div class="linkedin">
      <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></h4>
