--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        </ul></h3>
        </figure>
    </div>
+      </div>
      </nav>
     <div class="main">
       <div class="gallery">
@@ -39,6 +40,8 @@
      <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></h4>
      </div>   
      </figure>
+      </div>
+    </div>
      <div class="gallery">
       <figure class="gallery-item">
    <h2>Objective</h2>
@@ -55,6 +58,7 @@
    <p>1997- 2001</p>
    <p>Mathematics</p>
          </figure>
+       </div>
    <div class="gallery">
       <figure class="gallery-item">
   <h2>Experience</h2>
