--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
      55408
      </p>
      <div class="email">
-     Email: abbey.janicek@gmail.com
+       <p>Email: abbey.janicek@gmail.com</p>
      </div>
      <div class="linkedin">
-     <a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></h4>
+       <p><a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
      </div>   
      </figure>
       </div>
@@ -47,6 +47,7 @@
    <h2>Objective</h2>
         <p>To be accepted to the Full Stack Engineering program at Prime. To use this education to gain employment with a company where I can apply and develop my skills.</p>
        </figure>
+    </div>
    <div class="gallery">
       <figure class="gallery-item">
    <h2>Education</h2>
