--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
        <li>Education</li>
        <li>Experience</li>
        </ul></h3>
-        <img width="240" height="360" src="abbeyjanicek.github.io/Resume-Pic2.jpg" text-align="right"/>
+        <div class="resume-pic">
+        <img width="240" height="360" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
+        </div>
        </figure>
    </div>
       </div>
