--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <li>Experience</li>
        </ul></h3>
         <div class="resume-pic">
-        <img width="240" height="360" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
+        <img width="240" height="360" src="abbeyjanicek.github.io/Resume-Pic2.jpg" style="text-align:right" />
         </div>
        </figure>
    </div>
