insert links for nav bar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
      <div class="gallery">
       <figure class="gallery-item">
      <h3><ul>
-       <li>Objective</li>
-       <li>Education</li>
-       <li>Experience</li>
+       <li><a href="objective.asp">Objective</a></li>
+       <li><a href="education.asp">Education</a></li>
+       <li><a href="experience.asp">Experience</a></li>
        </ul></h3>
         <div class="resume-pic">
         <img width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg" style="text-align: right" />
