--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="hero-unit">
   <div class="hero-unit__background-image">
       </div>
-   <div class="main">
+   <div class="main" style="display: inline">
      <div class="gallery">
       <figure class="gallery-item">
      <h3><ul>
