create div for navbar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
    <div class="main" style="display: inline">
      <div class="gallery">
       <figure class="gallery-item">
+        <div class="nav-bar">
      <h3><ul>
        <li><a href="objective.asp">Objective</a></li>
        <li><a href="education.asp">Education</a></li>
        <li><a href="experience.asp">Experience</a></li>
        </ul></h3>
+        </div>
         <div class="resume-pic">
         <img width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg" style="text-align: right" />
         </div>
