--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg" style="text-align: right" />
         </div>
    <h1 class="name">Abbey Janicek</h1>
-   <h4><p class="address">2600 Pleasant Avenue
-     Apartment 302
-     Minneapolis, MN
-     55408</p>
+        <h4><p class="address">2600 Pleasant Avenue</p>
+          <p> Apartment 302</p>
+          <p> Minneapolis, MN</p>
+     <p>55408</p>
      <div class="email">
        <p>Email: abbey.janicek@gmail.com</p>
      </div>
