--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
    <h1 class="name">Abbey Janicek</h1>
         <h4><p class="address">2600 Pleasant Avenue</p>
           <p> Apartment 302</p>
-          <p> Minneapolis, MN</p>
-     <p>55408</p>
+          <p> Minneapolis, MN 55408</p>
      <div class="email">
        <p>Email: abbey.janicek@gmail.com</p>
      </div>
@@ -29,13 +28,16 @@
      </figure>
       </div>
     </div>
+      <div class="objective">
      <div class="gallery">
       <figure class="gallery-item">
    <h2>Objective</h2>
        <p>To be accepted to the Full Stack Engineering program at Prime. To use this education to gain employment with a company where I can apply and develop my skills.</p>
        </figure>
     </div>
-   <div class="gallery">
+      </div>
+   <div class="education">
+      <div class="gallery">
       <figure class="gallery-item">
    <h2>Education</h2>
    <h3><p>St. Catherine University, Saint Paul, MN — Master of Arts</p></h3>
@@ -47,6 +49,8 @@
    <p>Mathematics</p>
          </figure>
        </div>
+      </div>
+      <div class="experience">
    <div class="gallery">
       <figure class="gallery-item">
   <h2>Experience</h2>
@@ -75,6 +79,7 @@
     <li>Participated in a PLC to analyze student data and improve instruction</li>
 </li></p>
        </figure>
+  </div>
   </div>
  </body>
 </div>
