--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div class="main" style="display: inline">
      <div class="gallery">
       <figure class="gallery-item">
-        <img width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg" style="text-align: right" />
+        <img width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
    <h1 class="name">Abbey Janicek</h1>
         <h4><p class="address">2600 Pleasant Avenue</p>
           <p> Apartment 302</p>
