--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       <figure class="gallery-item">
         <img class="resume-pic" width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
    <h1 class="name">Abbey Janicek</h1>
-        <h4><p class="address">2600 Pleasant Avenue</p>
+        <h4><p class="address">
+          <p>2600 Pleasant Avenue</p>
           <p> Apartment 302</p>
           <p> Minneapolis, MN 55408</p>
+          </p>
      <div class="email">
        <p><a href: "mailto:abbey.janicek@gmail.com">Email: abbey.janicek@gmail.com</a></p>
      </div>
