create div for address

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <figure class="gallery-item">
         <img class="resume-pic" width="180" height="270" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
    <h1 class="name">Abbey Janicek</h1>
-        <h4><p class="address">
+<div class="address"><h4>
           <p>2600 Pleasant Avenue</p>
           <p> Apartment 302</p>
           <p> Minneapolis, MN 55408</p>
-          </p>
+  </div>
      <div class="email">
        <p><a href: "mailto:abbey.janicek@gmail.com">Email: abbey.janicek@gmail.com</a></p>
      </div>
