fixed linked text

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <div class="gallery">
       <figure class="gallery-item">
    <h2>Education</h2>
-   <h3><p><a href="https://www.stkate.edu/">St. Catherine University, Saint Paul, MN — Master of Arts</a></p></h3>
+   <h3><p><a href="https://www.stkate.edu/">St. Catherine University</a>, Saint Paul, MN — Master of Arts</p></h3>
    <p>2008 - 2011</p>
    <p>Education (MAED)</p>
    <p>Initial Teaching License – Secondary Mathematics, Grades 5 – 12</p>
-   <h3><p><a href="http://www.csuohio.edu/">Cleveland State University, Cleveland, OH — Bachelor of Arts</a></p></h3>
+   <h3><p><a href="http://www.csuohio.edu/">Cleveland State University</a>, Cleveland, OH — Bachelor of Arts</p></h3>
    <p>1997- 2001</p>
    <p>Mathematics</p>
          </figure>
@@ -54,15 +54,15 @@
    <div class="gallery">
       <figure class="gallery-item">
   <h2>Experience</h2>
-   <h3><p><a href="https://www.smm.org/">Science Museum of Minnesota, Saint Paul, MN — Curriculum Writer & Instructor</a></p></h3>
+   <h3><p><a href="https://www.smm.org/">Science Museum of Minnesota</a>, Saint Paul, MN — Curriculum Writer & Instructor</p></h3>
    <p>2017 - PRESENT</p>
    <p><ul>
    <li>Hired as part of the LinCT project (see below) fellowship of teachers in 2017</li>
    <li>Currently serve as a curriculum writer for outreach technology residencies in area elementary & middle schools, including writing content to train formal classroom teachers how to teach the technology curriculum within their own schools</li>
    <li>Teach elementary & middle school age students in technology school year residencies and summer camps</li>
    </ul></p>
-  <h3><p><a href="http://page.mpls.k12.mn.us/">Justice Page Middle School, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</a></p></h3>
-    <p>2014 - 2018</p>
+  <h3><p><a href="http://page.mpls.k12.mn.us/">Justice Page Middle School</a>, Minneapolis Public Schools, Minneapolis, MN — Grade 8 Math Teacher</p></h3>
+   <p>2014 - 2018</p>
     <p><ul>
   <li>Taught Algebra 8; Focus Math 8, an intervention class for students struggling in 8th grade Algebra; 10th grade Geometry, a class for accelerated students; 8th grade Advisory</li>
    <li>Co-taught with SPED teachers to facilitate student success</li>
@@ -70,7 +70,7 @@
     <li>Advisor of Student Council & Competitive Math Team for three years</li>
     <li>Served as 8th grade Team Lead for three years</li>
 </ul></p>
-<h3><p><a href="http://phs.sowashco.org/">Park High School, South Washington County Schools Cottage Grove, MN — Algebra & Geometry Intervention Teacher</a></p></h3>
+<h3><p><a href="http://phs.sowashco.org/">Park High School</a>, South Washington County Schools Cottage Grove, MN — Algebra & Geometry Intervention Teacher</p></h3>
         <p>2012 - 2014</p>
 <p><ul>
   <li>Taught a block Intermediate Algebra and Intervention Lab class; Geometry Intervention Lab; one section of remedial Geometry; 9th grade Advisory</li>
