--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p> Minneapolis, MN 55408</p>
   </div>
      <div class="email">
-       <p><a href= "mailto:abbey.janicek@gmail.com">Email: abbey.janicek@gmail.com</a></p>
+       <p>Email: <a href= "mailto:abbey.janicek@gmail.com">abbey.janicek@gmail.com</a></p>
      </div>
      <div class="linkedin">
        <p><a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
