created references div

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
     <li>Participated in a PLC to analyze student data and improve instruction</li>
 </li></p>
        </figure>
+    <div class="references">
+   <div class="gallery">
+      <figure class="gallery-item">
+  <h2>References</h2>
+        <p>References are available upon request.</p>
+        </figure>
   </div>
   </div>
  </body>
