fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <p>Email: <a href= "mailto:abbey.janicek@gmail.com">abbey.janicek@gmail.com</a></p>
      </div>
      <div class="linkedin">
-       <p><a href="https://www.linkedin.com/in/abbey-janicek/"> LinkedIn </a></p></h4>
+       <p>LinkedIn: <a href="https://www.linkedin.com/in/abbey-janicek/"> Abbey Janicek </a></p></h4>
      </div>   
      </figure>
       </div>
