fixed font color of email/linkedin

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <figure class="gallery-item">
         <img class="resume-pic" width="225" height="315" src="abbeyjanicek.github.io/Resume-Pic2.jpg"/>
    <h1 class="name">Abbey Janicek</h1>
-<div class="address"><h4>
-          <p>2600 Pleasant Avenue</p>
-          <p> Apartment 302</p>
-          <p> Minneapolis, MN 55408</p>
+<div class="address">
+         <h4><p>2600 Pleasant Avenue</p>
+          <p>Apartment 302</p>
+           <p>Minneapolis, MN 55408</p></h4>
   </div>
      <div class="email">
-       <p>Email: <a href= "mailto:abbey.janicek@gmail.com">abbey.janicek@gmail.com</a></p>
+       <h4><p>Email: <a href= "mailto:abbey.janicek@gmail.com">abbey.janicek@gmail.com</a></p></h4>
      </div>
      <div class="linkedin">
-       <p>LinkedIn: <a href="https://www.linkedin.com/in/abbey-janicek/"> Abbey Janicek </a></p></h4>
+       <h4><p>LinkedIn: <a href="https://www.linkedin.com/in/abbey-janicek/"> Abbey Janicek </a></p></h4>
      </div>   
      </figure>
       </div>
